--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/8963303?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: dreece@uta.edu
   facebook:
   flickr:
   github: barryclark/jekyll-now
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://drreece.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
